--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ﻿/.vs
-/bin/
-/obj/
-/bin
-/obj
-bin/
-obj/
+/BankAccountWithDelegates/bin/*
+/BankAccountWithDelegates/obj/*
+/BankAccountWithDelegates/bin/Debug/net8.0/BankAccountWithDelegates.dll
+/BankAccountWithDelegates/bin/Debug/net8.0/BankAccountWithDelegates.pdb
+/BankAccountWithDelegates/bin/Debug/net8.0/BankAccountWithDelegates
+/BankAccountWithDelegates/obj/Debug/net8.0/ref/BankAccountWithDelegates.dll
+/BankAccountWithDelegates/obj/Debug/net8.0/refint/BankAccountWithDelegates.dll
+/BankAccountWithDelegates/obj/Debug/net8.0/apphost
